Set the default styles for the homepage slideshowso that it dispays correctly before thewidget is loaded.  Fixes the issue of the content jumping around.

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -206,13 +206,17 @@ body.blue {
 	
     position: relative;
 	display: block;
-	float: left;
-	width: 714px;
-	height: 400px;
     
-	margin-bottom: @spacer;
-    margin-right: @spacer;
-    border: @borderWidth solid @black;
+    &.homepageSlideshow {
+        float: left;
+        margin-bottom: @spacer;
+        margin-right: @spacer;
+        border: @borderWidth solid @black;
+        width: 350px;
+        height: 350px;
+        background-image: url("/wp-content/themes/RPRHAG/media/images/slideshow/KayleighAndJosephine.jpg");
+    }
+	
 }
 
 div.hiddenDiv{
